# LiverMRI-crossed-nnUNet

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_full_study.ps1  run_full_study.sh  run_livermri_crossseq_pipeline.ps1  run_livermri_sequence_screening.ps1  run_roi_screening_study.ps1
configs/: label_map.yaml  study_config.yaml
configs/dataset/: livermri_crossseq_dataset.yaml
configs/experiment/: livermri_crossseq_fusion.yaml
docs/: EXPERIMENT_PLAN.md  PAPER_STRUCTURE.md  REPO_SELF_REVIEW.md  ROI_REGISTRATION_STUDY_CN.md  SELF_AUDIT_FRAMEWORK.md  project_structure_and_naming_cn.md  protocol_sequence_screening_and_registration_cn.md
manuscript/: manuscript_template.md
outputs/: manifest_proposed_summary.json
outputs/audit/: SELF_AUDIT_REPORT.md  manifest_validated.csv  self_audit_summary.json  validation_summary.json
outputs/audit_full_fast/: validation_summary.json
outputs/audit_quick/: manifest_validated.csv  validation_summary.json
outputs/experiments/: EXPERIMENT_SUITE.md  experiment_registry.csv
outputs/profile/: DATASET_PROFILE.md  dataset_profile_summary.json  experiment_catalog.csv  (+4 more)
scripts/: README.md  aggregate_results.py  assign_folds.py  build_manuscript.py  common.py  evaluate_predictions.py  export_nnunet_source_dataset.py  export_target_test_sets.py  generate_experiment_scripts.py  generate_failure_case_manifest.py  generate_splits_json.py  make_figures.py  prepare_fewshot_adaptation.py  profile_dataset.py  propose_manifest.py  self_audit.py  validate_manifest.py
templates/: table_descriptions.md
(+78 files in other folders)
